# Redictra

./: .env.example  .vercelignore  CLAUDE.md  LINK_INVITO.md  README.md  SETUP_TODO.md  ai_engine.py  bot_handler.py  config.py  db.py  main.py  pyproject.toml  reddit_scraper.py  requirements.txt  schema.sql  telegram_delivery.py  vercel.json
.github/workflows/: cron_runner.yml
api/: requirements.txt  telegram.py
