# Redictra — config Python per il deploy Vercel.
# Vercel CLI 54.x richiede di dichiarare ESPLICITAMENTE l'entrypoint della
# funzione serverless (il webhook Telegram). Senza questo, il build fallisce con
# "No python entrypoint found in default locations".
# L'entrypoint è la classe `handler` (BaseHTTPRequestHandler) in api/telegram.py.

[project]
name = "redictra-webhook"
version = "0.1.0"
# Dipendenze MINIME del webhook (solo onboarding: db + config + componi_brief).
# NON serve python-telegram-bot (qui si parla con Telegram via HTTP diretto) né
# feedparser/google-genai (scraping e AI girano su GitHub Actions, non qui).
requires-python = ">=3.11"
dependencies = [
    "supabase==2.9.1",
    "python-dotenv==1.0.1",
    "tzdata",
]

[tool.vercel]
entrypoint = "api.telegram:handler"
